add: all classes